pxc/tests/test_130_constvec/cvec4.px
namespace cvec4;
public import common -;

{
  cvarray{int} v;
  v.push_back(3);
  v.push_back(4);
  v.push_back(5);
  slice{int} s = v; // error
  println(s);
}
